# jaseci

./: .gitignore  .jacignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  jac.toml  ruff.toml
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: build-binaries.yml  ci.yml  contribution-checks.yml  experimental-image.yml  jac-check.yml  k8s-microservice-real-e2e.yml  nightly.yml  publish-release.yml  test-installer.yml  test-jac-scale.yaml  test-jaseci.yml
docker/: jaclang.Dockerfile
docs/: jac.toml  mkdocs.yml  pyproject.toml
docs/scripts/: handle_jac_compile_data.py
docs/snippets/: model-config.md
jac/: .gitignore  _jac_finder.py  build.zig  jac.toml  pyproject.toml
jac-byllm/: jac.toml  pyproject.toml
jac-byllm/byllm/: llm.jac  local_runtime.jac  plugin.jac  schema.jac  types.jac
jac-byllm/tests/: test_byllm.jac  test_mtir_integration.py  test_truncated_tool_calls.jac
jac-client/: jac.toml  pyproject.toml
jac-desktop/: jac.toml
jac-mcp/: jac.toml
jac-mcp/jac_mcp/: plugin_config.jac
jac-scale/: README.md  WEBHOOK_SUPPORT.md  jac.toml  pyproject.toml  utils.jac
jac-scale/jac_scale/: db.jac  (+27 more)
jac-super/: jac.toml
jac-version-manager/: README.md  pyproject.toml
jac-version-manager/shell/: jvm.fish  jvm.sh
jac-version-manager/src/jvm/: __init__.py  cli.py  config.py  installer.py  pypi.py  shell.py  switcher.py
jaseci-package/: jac.toml  pyproject.toml
scripts/: check-release-notes.sh  collect_release_notes.jac  install.sh  integration_tests.jac  release.jac  release_utils.jac  validate_release.jac
(+1292 files in other folders)
